# cyclo_intelligence

./: .gitignore  .gitmodules  README.ko.md  README.md  install.sh  test_install_sh.py
cyclo_data/: CHANGELOG.rst  README.md  package.xml  setup.py
cyclo_data/cyclo_data/: cyclo_data_node.py
cyclo_data/cyclo_data/converter/: CONVERSION_PIPELINE.md  base_converter.py  pipeline_worker.py  rosbag2mp4.py  to_lerobot_v21.py  to_lerobot_v30.py  video_sync.py
cyclo_data/cyclo_data/converter/scripts/: convert_rosbag_to_lerobot.py
cyclo_data/cyclo_data/converter/video_encoder/: ffmpeg_encoder.py
cyclo_data/cyclo_data/editor/: episode_editor.py
cyclo_data/cyclo_data/hub/: api_worker.py  endpoint_store.py  progress_tracker.py
cyclo_data/cyclo_data/hub/templates/: dataset_card.md  model_card.md
cyclo_data/cyclo_data/reader/: bag_reader.py  frame_timestamps.py  metadata_manager.py  video_metadata_extractor.py
cyclo_data/cyclo_data/recorder/: analyze_video_diagnostics.py  camera_info_snapshot.py  replay_handler.py  rosbag_control.py  session_manager.py  transcoder.py  video_recorder.py
cyclo_data/cyclo_data/services/: conversion_service.py  hub_service.py  recording_service.py
cyclo_data/cyclo_data/visualization/: rosbag_visualizer.py  video_file_server.py
cyclo_data/recorder/rosbag_recorder/: CHANGELOG.rst  DOCKER_BUILD.md  IMPLEMENTATION_SUMMARY.md  README.md  package.xml
cyclo_data/recorder/rosbag_recorder/src/: service_bag_recorder.cpp
cyclo_data/tests/converter/: test_lerobot_feature_names.py  test_video_sync.py
cyclo_data/tests/recorder/: test_recording_service.py  test_replay_handler.py  test_session_archive.py  test_transcoder.py  test_video_recorder.py
cyclo_intelligence/: CHANGELOG.rst  CMakeLists.txt  package.xml
interfaces/: CHANGELOG.rst  CMakeLists.txt  FEATURES.md  package.xml
interfaces/msg/: ActionChunk.msg  RecordingStatus.msg  TaskInfo.msg
interfaces/srv/: EngineCommand.srv  GetImageTopicList.srv  GetNodeCatalog.srv  GetRobotInfo.srv  GetTreeList.srv  InferenceCommand.srv  RecordingCommand.srv  SendCommand.srv
orchestrator/: CHANGELOG.rst  README.md  package.xml  setup.py
orchestrator/launch/: bt_node.launch.py  cyclo_intelligence_bringup.launch.py  orchestrator_bringup.launch.py
orchestrator/orchestrator/: orchestrator_node.py
orchestrator/orchestrator/bt/: __init__.py  blackboard.py  bt_node.py  bt_nodes_loader.py  constants.py  node_registry.py
orchestrator/orchestrator/bt/actions/: __init__.py  base_action.py  joint_control.py  rotate.py  send_command.py  wait.py
orchestrator/orchestrator/bt/controls/: __init__.py  base_control.py  loop.py  sequence.py
orchestrator/orchestrator/bt/templates/: README.md  __init__.py  action_template.py  control_template.py
orchestrator/orchestrator/bt/trees/: ffw_sg2_rev1_example.xml  test.xml
orchestrator/orchestrator/internal/communication/: communicator.py  container_service_client.py  cyclo_data_client.py  inference_mode.py
orchestrator/orchestrator/internal/device_manager/: FEATURES.md  cpu_checker.py
orchestrator/orchestrator/timer/: timer_manager.py
orchestrator/orchestrator/training/: zenoh_training_manager.py
orchestrator/scripts/: test_rosbridge_connection.py
orchestrator/tests/: test_inference_mode.py
orchestrator/tests/bt/: test_review_fixes.py
orchestrator/tests/data_processing/: test_converter_segment_videos.py  test_episode_editor.py  test_metadata_manager.py  test_replay_handler.py  test_rosbag_to_lerobot_converter.py  test_video_metadata_extractor.py
orchestrator/ui/: CHANGELOG.rst  Dockerfile  FEATURES.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
orchestrator/ui/public/: cyclo-config.js  index.html
orchestrator/ui/src/: App.css  App.js  App.test.js  index.js
orchestrator/ui/src/components/: DatasetDownloadModal.js  EpisodeStatus.js  FileBrowserDemo.js  ImageGrid.js  ImageGrid.test.js  ImageGridCell.js  InferenceControlPanel.js  InferenceControlPanel.test.js  InferenceModelSelector.js  InferencePanel.js  InfoPanel.js  PolicyBackendControl.js  PolicyBackendControl.test.js  PolicyDownloadModal.js  RecordControlPanel.js  RecordTopicMonitor.js  RecordTopicMonitor.test.js  RobotTypeSelector.js  RobotViewer3D.js  RobotViewer3D.test.js  SegmentPanel.js  SegmentPanel.test.js  ThemeToggle.js  TrtEngineControl.js
orchestrator/ui/src/config/: runtimeConfig.js
orchestrator/ui/src/constants/: btNodeCatalog.js  btNodeCatalogFallback.js  btSupport.js  pageType.js  paths.js  policyCapabilities.js  taskCommand.js
orchestrator/ui/src/contexts/: ThemeContext.js
orchestrator/ui/src/hooks/: useBTHistory.js  useBTNodeCatalog.js  useJointStateSubscription.js  useKeyboardShortcuts.js  useMcapFramePlayer.js  useNavigationRosTopic.js  useNavigationRosTopic.test.js  usePolicyBackendStatus.js  usePolicyBackendStatus.test.js  useRosServiceCaller.js  useRosServiceCaller.test.js  useRosTopicSubscription.js  useUrdfRobot.js  useWorkspaceMount.js
orchestrator/ui/src/pages/: BTManagerPage.js  EditDatasetPage.js  HomePage.js  InferencePage.js  NavigationPage.js  NavigationPage.test.js  RecordPage.js  ReplayPage.js  TrainingPage.js
orchestrator/ui/src/store/: store.js
orchestrator/ui/src/utils/: FrameQueue.js  FrameQueue.test.js  btTreeParser.js  btXmlSerializer.js  btXmlSerializer.test.js  (+14 more)
shared/: CHANGELOG.rst  package.xml  setup.py
shared/shared/io/: file_io.py
shared/shared/robot_configs/: f2_config.yaml  ffw_bg2_rev4_config.yaml  ffw_sg2_rev1_config.yaml  ffw_sh5_rev1_config.yaml  omx_f_config.yaml  omy_f3m_config.yaml  schema.py
shared/tests/: test_robot_config_schema.py
(+196 files in other folders)
