<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyclo_data</name>
  <version>0.1.1</version>
  <description>
    Cyclo Intelligence — data recording, conversion, editing, HuggingFace hub, and visualization as an independent ROS 2 node (see PLAN.md §6).
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kdy@robotis.com">Dongyun Kim</author>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>interfaces</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag_recorder</depend>
  <depend>shared</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
