<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orchestrator</name>
  <version>0.1.1</version>
  <description>
    ROS 2 package for Cyclo Intelligence integration
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kdy@robotis.com">Dongyun Kim</author>
  <author email="kimsw@robotis.com">Seongwoo Kim</author>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interfaces</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag_recorder</depend>
  <depend>shared</depend>
  <!-- bt/ subtree (absorbed from orchestrator/bt in Step 5-A) needs
       numpy (math) and lxml (tree XML parsing) at runtime. -->
  <exec_depend>python3-lxml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
